Fixed header on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body {
     color: white;
     text-align: center;
     padding-top: 35px;
+    margin-bottom: 0px;
     font-size: 4em;
     letter-spacing: 2px;
 }
@@ -29,12 +30,12 @@ body {
     position: relative;
     color: white;
     text-align: center;
-    bottom: 20px;
+    bottom: 15px;
 }
 
 @media (max-width: 503px){
     .banner h1 {
-        font-size: 2.3em;
+        font-size: 2.6em;
     }
     .icons svg {
         height: 20px;
